// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parseRemote should parse expired UniswapX order 1`] = `
Object {
  "addedTime": 10000,
  "chainId": 1,
  "encodedOrder": undefined,
  "expiry": undefined,
  "id": "someId",
  "offerer": "someOfferer",
  "orderHash": "someHash",
  "status": "expired",
  "swapInfo": Object {
    "expectedOutputCurrencyAmountRaw": "200000000000000000000",
    "inputCurrencyAmountRaw": "100000000000000000000",
    "inputCurrencyId": "0x6B175474E89094C44Da98b954EedeAC495271d0F",
    "isUniswapXOrder": true,
    "minimumOutputCurrencyAmountRaw": "200000000000000000000",
    "outputCurrencyId": "0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2",
    "settledOutputCurrencyAmountRaw": undefined,
    "tradeType": 0,
    "type": 1,
  },
  "txHash": undefined,
  "type": undefined,
}
`;

exports[`parseRemote should parse filledUniswapX order 1`] = `
Object {
  "addedTime": 10000,
  "chainId": 1,
  "encodedOrder": undefined,
  "expiry": undefined,
  "id": "someId",
  "offerer": "someOfferer",
  "orderHash": "someHash",
  "status": "filled",
  "swapInfo": Object {
    "expectedOutputCurrencyAmountRaw": "200000000000000000000",
    "inputCurrencyAmountRaw": "100000000000000000000",
    "inputCurrencyId": "0x6B175474E89094C44Da98b954EedeAC495271d0F",
    "isUniswapXOrder": true,
    "minimumOutputCurrencyAmountRaw": "200000000000000000000",
    "outputCurrencyId": "0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2",
    "settledOutputCurrencyAmountRaw": "200000000000000000000",
    "tradeType": 0,
    "type": 1,
  },
  "txHash": "someHash",
  "type": undefined,
}
`;

exports[`parseRemote should parse open UniswapX order 1`] = `
Object {
  "addedTime": 10000,
  "chainId": 1,
  "encodedOrder": undefined,
  "expiry": undefined,
  "id": "someId",
  "offerer": "someOfferer",
  "orderHash": "someHash",
  "status": "open",
  "swapInfo": Object {
    "expectedOutputCurrencyAmountRaw": "200000000000000000000",
    "inputCurrencyAmountRaw": "100000000000000000000",
    "inputCurrencyId": "0x6B175474E89094C44Da98b954EedeAC495271d0F",
    "isUniswapXOrder": true,
    "minimumOutputCurrencyAmountRaw": "200000000000000000000",
    "outputCurrencyId": "0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2",
    "settledOutputCurrencyAmountRaw": undefined,
    "tradeType": 0,
    "type": 1,
  },
  "txHash": undefined,
  "type": undefined,
}
`;
